suppress error message

--- a/DunnCounty_COVID19.ipynb
+++ b/DunnCounty_COVID19.ipynb
@@ -85,7 +85,7 @@
    "source": [
     "# This is the data for all of Wisconsin.\n",
     "url = \"https://opendata.arcgis.com/datasets/b913e9591eae4912b33dc5b4e88646c5_10.csv\"\n",
-    "data = pd.read_csv(url, parse_dates=['DATE'])"
+    "data = pd.read_csv(url, parse_dates=['DATE'], low_memory=False)"
    ]
   },
   {
