--- a/DunnCounty_COVID19.ipynb
+++ b/DunnCounty_COVID19.ipynb
@@ -64,7 +64,7 @@
    "outputs": [],
    "source": [
     "# This is the data for all of Wisconsin.\n",
-    "url = \"https://opendata.arcgis.com/datasets/80ff9d4897db4d7692f0f4ad28447cab_12.csv\"\n",
+    "url = \"https://opendata.arcgis.com/api/v3/datasets/3161f6e01d8141c6abe85a29ff7f3d3c_12/downloads/data?format=csv\"\n",
     "data = pd.read_csv(url, parse_dates=['DATE'], low_memory=False)"
    ]
   },
@@ -383,7 +383,7 @@
     "tags": []
    },
    "source": [
-    "Data source: [Wisconsin Department of Health Services](https://data.dhsgis.wi.gov/datasets/covid-19-historical-data-by-county)"
+    "Data source: [Wisconsin Department of Health Services](https://data.dhsgis.wi.gov/datasets/wi-dhs::covid-19-historical-data-by-county-1)"
    ]
   },
   {
