--- a/DunnCounty_COVID19.ipynb
+++ b/DunnCounty_COVID19.ipynb
@@ -64,7 +64,7 @@
    "outputs": [],
    "source": [
     "# This is the data for all of Wisconsin.\n",
-    "url = \"https://opendata.arcgis.com/api/v3/datasets/3161f6e01d8141c6abe85a29ff7f3d3c_12/downloads/data?format=csv\"\n",
+    "url = \"https://opendata.arcgis.com/api/v3/datasets/3161f6e01d8141c6abe85a29ff7f3d3c_12/downloads/data?format=csv&spatialRefId=3857\"\n",
     "data = pd.read_csv(url, parse_dates=['DATE'], low_memory=False)"
    ]
   },
