date column header changed

--- a/DunnCounty_COVID19.ipynb
+++ b/DunnCounty_COVID19.ipynb
@@ -65,7 +65,7 @@
    "source": [
     "# This is the data for all of Wisconsin.\n",
     "url = \"https://opendata.arcgis.com/api/v3/datasets/6496bdf64f7a44bba593862d04d01b2b_0/downloads/data?format=csv&spatialRefId=4326\"\n",
-    "data = pd.read_csv(url, parse_dates=['DATE'], low_memory=False)"
+    "data = pd.read_csv(url, parse_dates=['Date'], low_memory=False)"
    ]
   },
   {
@@ -96,7 +96,7 @@
    },
    "outputs": [],
    "source": [
-    "dc = data.groupby('NAME').get_group('Dunn').sort_values(by='DATE') # Select the data for Dunn County from the full data.\n",
+    "dc = data.groupby('NAME').get_group('Dunn').sort_values(by='Date') # Select the data for Dunn County from the full data.\n",
     "dc.fillna(0, inplace=True) # Fill in any blank cells with 0 to prevent errors.\n",
     "PNi = dc.columns.get_loc(\"POS_NEW\")\n",
     "dc['7_DAY'] = dc.iloc[:,PNi].rolling(window=7).mean() # Calculates the rolling 7-day average of new cases.\n",
@@ -144,7 +144,7 @@
     }
    ],
    "source": [
-    "display(Markdown('### Last updated: ' + dc.iloc[-1]['DATE'].strftime(\"%B %d, %Y\")))"
+    "display(Markdown('### Last updated: ' + dc.iloc[-1]['Date'].strftime(\"%B %d, %Y\")))"
    ]
   },
   {
@@ -231,7 +231,7 @@
     }
    ],
    "source": [
-    "dc.plot(x='DATE',y='POSITIVE',color='red',grid='True',figsize=(12,6)).set_xlabel('Date');"
+    "dc.plot(x='Date',y='POSITIVE',color='red',grid='True',figsize=(12,6)).set_xlabel('Date');"
    ]
   },
   {
@@ -292,7 +292,7 @@
     }
    ],
    "source": [
-    "dc.plot(kind='line',x='DATE',y='7_DAY',color='blue',grid='True',figsize=(12,6)).set_xlabel('Date');"
+    "dc.plot(kind='line',x='Date',y='7_DAY',color='blue',grid='True',figsize=(12,6)).set_xlabel('Date');"
    ]
   },
   {
@@ -350,7 +350,7 @@
     }
    ],
    "source": [
-    "dc.plot(kind='line',x='DATE',y='14_DAY',color='green',grid='True',figsize=(12,6)).set_xlabel('Date');"
+    "dc.plot(kind='line',x='Date',y='14_DAY',color='green',grid='True',figsize=(12,6)).set_xlabel('Date');"
    ]
   },
   {
