Notice that data is not being posted any longer.

--- a/DunnCounty_COVID19.ipynb
+++ b/DunnCounty_COVID19.ipynb
@@ -138,7 +138,7 @@
     {
      "data": {
       "text/markdown": [
-       "### Last updated: August 30, 2023"
+       "### Last updated: August 30, 2023 [No longer updating as Wisconsin appears to have stopped publishing data.]"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
